--- a/Default/2 Images/No Animation.css
+++ b/Default/2 Images/No Animation.css
@@ -1,7 +1,7 @@
 /***Two Images w/o Animation***/
 /**User**/li.voice-state:not([data-reactid*="UserID"]) { display:none; }
 /**Avatar**/.avatar { content:url(ImageURL); }
-/*Speaking*/.speaking { content:url(ImageURL); }
+/**Speaking**/.speaking { content:url(ImageURL); }
 /*Hide Scrollbars*/body { overflow:hidden; }
 /*Removal*/.voice-container .voice-states { margin:0; padding:0; }
 /*Avatar CSS*/.voice-container .voice-states .voice-state .avatar { width:auto; height:auto; border:0; border-radius:0; filter:brightness(50%); }
