--- a/Flexbox/2 Images/Animation.css
+++ b/Flexbox/2 Images/Animation.css
@@ -1,6 +1,6 @@
 /***Two Images w/ Animation***/
 /**User**/
-li.voice-state:not([data-reactid*="UserID"]) { display:none; }
+.voice-container .voice-states .voice-state:not([data-reactid*="UserID"]) { display:none; }
 /**Avatar**/
 .avatar { content:url(ImageURL); }
 /**Speaking**/
@@ -12,7 +12,7 @@ body { overflow:hidden; }
 /*Flex Setup*/
 .voice-container .voice-states .voice-state { height:auto; display:flex; justify-content:center; }
 /*Avatar CSS*/
-.voice-container .voice-states .voice-state .avatar { margin:0; width:auto; height:auto; max-height:600px; border:0; border-radius:0; float:none; filter:brightness(50%); }
+.voice-container .voice-states .voice-state .avatar { margin:0; width:auto; height:auto; border:0; border-radius:0; float:none; filter:brightness(50%); }
 /*Speaking CSS*/
 .voice-container .voice-states .voice-state .avatar.speaking { filter:brightness(100%); }
 /*Username CSS*/
