--- a/Flexbox/1 Image/Animation.css
+++ b/Flexbox/1 Image/Animation.css
@@ -7,5 +7,6 @@
 /*List CSS*/ ul[class*="voiceStates"] { padding-inline:0; margin-block:0; }
 /*List Item CSS*/ li[class*="voiceState"] { flex-direction:column; justify-content:flex-end; align-items:center; margin:0; height:unset; }
 /*Avatar CSS*/ img[class*="avatar"] { width:100%; height:auto; border:0; border-radius:0; margin:0; float:unset; filter:brightness(50%); transition: all 0.2s ease-in-out; }
-/*Speaking CSS*/ img[class*="avatarSpeaking"] { filter:brightness(95%); }
+/*Speaking CSS*/ img[class*="avatarSpeaking"] { position:relative; animation:speak-now 0.2s; filter:brightness(95%); }
 /*Username CSS*/ div[class*="user"] {position:absolute; text-align:center; padding:0;} span[class*="name"] { margin-bottom: 0.5em; }
+/*Animation*/ @keyframes speak-now { 50%{ bottom:3px; } }
